# landing-page

./: .dockerignore  .flaskenv  .gitignore  Dockerfile  LICENSE.txt  Makefile  README.md  docker-compose.yaml  pyproject.toml
config_templates/: .env  .flaskenv
migrations/versions/: 0880e824ec1e_create_count_table_to_store_total_.py
src/landing_page/: app.py  config.py  model.py
src/landing_page/helpers/: constants.py  logging.py
src/landing_page/static/: styles.css
src/landing_page/templates/: index.html
