[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "landing-page"
dynamic = ["version"]
description = 'A Personalized Landing Page showcasing Achievements,Accolades,Skills etc.,'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["Landing page"]
authors = [
  { name = "Deepak Sanjay S J", email = "deepaksanjaysj@gmail.com" },
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Framework :: Flask",
  "Framework :: Hatch",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/DeepakSan/landing-page/blob/main/README.md"
Source = "https://github.com/DeepakSan/landing-page/tree/main"

[tool.hatch.version]
path = "src/landing_page/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/landing_page tests}"

[tool.coverage.run]
source_pkgs = ["landing_page", "tests"]
branch = true
parallel = true
omit = [
  "src/landing_page/__about__.py",
]

[tool.coverage.paths]
landing_page = ["src/landing_page", "*/landing-page/src/landing_page"]
tests = ["tests", "*/landing-page/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
